# cpp_cv_pipeline

./: CMakeLists.txt  README.md
include/: dummy_frame_source.hpp  frame.hpp  frame_source.hpp  pipeline.hpp  processor.hpp  video_frame_source.hpp  video_writer.hpp  visualizer.hpp
src/: dummy_frame_source.cpp  main.cpp  pipeline.cpp  video_frame_source.cpp  video_writer.cpp  visualizer.cpp
